<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizapp_2.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="32dp">

            <RadioGroup
            android:id="@+id/questionOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/question_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/question_1"
                android:textAppearance="@style/question" />

            <RadioButton
                android:id="@+id/answer_1a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/materialGreen"
                android:text="@string/answer_1a"
                android:textColor="@color/materialGreen" />

            <RadioButton
                android:id="@+id/answer_1b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/materialGreen"
                android:text="@string/answer_1b"
                android:textColor="@color/materialGreen" />

            <RadioButton
                android:id="@+id/answer_1c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/materialGreen"
                android:text="@string/answer_1c"
                android:textColor="@color/materialGreen" />

            <RadioButton
                android:id="@+id/answer_1d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/materialGreen"
                android:text="@string/answer_1d"
                android:textColor="@color/materialGreen" />

                <Button
                    android:id="@+id/buttonOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="answerQuestion1"
                    android:text="Answer Question 1" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/questionTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="32dp">

                <TextView
                    android:id="@+id/question_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/question_2"
                    android:textAppearance="@style/question" />

                <RadioButton
                    android:id="@+id/answer_2a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/materialGreen"
                    android:text="@string/answer_2a"
                    android:textColor="@color/materialGreen" />

                <RadioButton
                    android:id="@+id/answer_2b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/materialGreen"
                    android:text="@string/answer_2b"
                    android:textColor="@color/materialGreen" />

                <RadioButton
                    android:id="@+id/answer_2c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/materialGreen"
                    android:text="@string/answer_2c"
                    android:textColor="@color/materialGreen" />

                <RadioButton
                    android:id="@+id/answer_2d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/materialGreen"
                    android:text="@string/answer_2d"
                    android:textColor="@color/materialGreen" />

                <Button
                    android:id="@+id/buttonTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="answerQuestion2"
                    android:text="Answer Question 2"/>

            </RadioGroup>

            <RadioGroup
                android:id="@+id/questionThree"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="32dp">

                <TextView
                    android:id="@+id/question_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/question_3"
                    android:textAppearance="@style/question" />

                <RadioButton
                    android:id="@+id/answer_3a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/materialGreen"
                    android:text="@string/answer_3a"
                    android:textColor="@color/materialGreen" />

                <RadioButton
                    android:id="@+id/answer_3b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/materialGreen"
                    android:text="@string/answer_3b"
                    android:textColor="@color/materialGreen" />

                <RadioButton
                    android:id="@+id/answer_3c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/materialGreen"
                    android:text="@string/answer_3c"
                    android:textColor="@color/materialGreen" />

                <RadioButton
                    android:id="@+id/answer_3d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/materialGreen"
                    android:text="@string/answer_3d"
                    android:textColor="@color/materialGreen" />

                <Button
                    android:id="@+id/buttonThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="answerQuestion3"
                    android:text="Answer Question 3"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="32dp">

                <TextView
                    android:id="@+id/question_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/question_4"
                    android:textAppearance="@style/question" />

                <CheckBox
                    android:id="@+id/answer_4a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/materialGreen"
                    android:text="@string/answer_4a"
                    android:textColor="@color/materialGreen"/>

                <CheckBox
                    android:id="@+id/answer_4b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/materialGreen"
                    android:text="@string/answer_4b"
                    android:textColor="@color/materialGreen"/>

                <CheckBox
                    android:id="@+id/answer_4c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/materialGreen"
                    android:text="@string/answer_4c"
                    android:textColor="@color/materialGreen"/>

                <CheckBox
                    android:id="@+id/answer_4d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/materialGreen"
                    android:text="@string/answer_4d"
                    android:textColor="@color/materialGreen"/>

                <Button
                    android:id="@+id/buttonFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="answerQuestion4"
                    android:text="Answer Question 4"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="32dp">

                <TextView
                    android:id="@+id/question_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/question_5"
                    android:textAppearance="@style/question" />

                <EditText
                    android:id="@+id/answer_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:hint="Answer Here"
                    android:textAppearance="@style/question"
                    android:textColor="@color/materialGreen"/>

                <Button
                    android:id="@+id/buttonFive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="answerQuestion5"
                    android:text="Answer Question 5"
                    android:textColor="@color/materialGreen"
                    android:layout_marginBottom="32dp"/>

                <Button
                    android:id="@+id/showResults"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="showResults"
                    android:text="Show Results"
                    android:textColor="@color/materialGreen"/>

                <Button
                    android:id="@+id/reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="reset"
                    android:text="Try Again"
                    android:textColor="@color/materialGreen"/>


            </LinearLayout>



        </LinearLayout>


    </ScrollView>

</LinearLayout>
